--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,4 +1,14 @@
-requests
-ruff
-flask
-gunicorn
+anyio==3.6.2
+click==8.1.3
+Flask==2.2.3
+gunicorn==20.1.0
+idna==3.4
+importlib-metadata==6.6.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+ruff==0.0.263
+sniffio==1.3.0
+watchfiles==0.19.0
+Werkzeug==2.2.3
+zipp==3.15.0
