--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 dnspython==2.3.0
 email-validator==2.0.0.post2
 fastapi==0.95.1
+gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.17.0
 httptools==0.5.0
