Add gevent to flask

--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -15,4 +15,10 @@ COPY ./src /code/app
 
 WORKDIR /code/app
 
-CMD ["gunicorn", "-w 12", "-b 0.0.0.0:7778", "app:app"]
+
+# CMD ["gunicorn", "--worker-class gevent", "-w 12", "-b 0.0.0.0:7778", "patched:app"]
+
+CMD gunicorn --worker-class gevent \
+  --workers 12 \
+  --bind 0.0.0.0:7778 \
+  patched:app
