--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,6 +1,8 @@
 anyio==3.6.2
 click==8.1.3
 Flask==2.2.3
+gevent==22.10.2
+greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.6.0
@@ -12,3 +14,5 @@ sniffio==1.3.0
 watchfiles==0.19.0
 Werkzeug==2.2.3
 zipp==3.15.0
+zope.event==4.6
+zope.interface==6.0
